[package]
name = "p2p-node"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
libp2p = { version = "0.55.0", features = [
    "identify",
    "ping",
    "noise",
    "yamux",
    "gossipsub",
    "mdns",
    "tcp",
    "tokio",
    "rendezvous",
    "macros"    # Added for NetworkBehaviour derive
]}
tokio = { version = "1.43", features = ["full"] }
env_logger = "0.10"
log = "0.4"
futures = "0.3"
